// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VotingDialog should match the snapshot with active voting 1`] = `
<div
  class="portal"
  role="dialog"
>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    data-focus-lock-disabled="false"
  >
    <div
      class="portal__frame accent-color__backlog-blue"
    >
      <div
        class="portal__content"
        role="dialog"
      >
        <aside
          class="dialog voting-dialog accent-color__planning-pink"
        >
          <article
            class="dialog__content"
          >
            <h2
              class="dialog__header-text"
            >
              Voting
            </h2>
            <button
              class="voting-dialog__start-button"
              data-testid="voting-dialog__cancel-button"
            >
              <label>
                Cancel voting phase
              </label>
            </button>
            <button
              class="voting-dialog__start-button"
              data-testid="voting-dialog__stop-button"
            >
              <label>
                End voting phase
              </label>
            </button>
          </article>
          <button
            class="dialog__close-button"
          >
            <svg
              class="dialog__close-icon"
            >
              icon-close.svg
            </svg>
          </button>
        </aside>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;

exports[`VotingDialog should match the snapshot with no active voting 1`] = `
<div
  class="portal"
  role="dialog"
>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    data-focus-lock-disabled="false"
  >
    <div
      class="portal__frame accent-color__backlog-blue"
    >
      <div
        class="portal__content"
        role="dialog"
      >
        <aside
          class="dialog voting-dialog accent-color__planning-pink"
        >
          <article
            class="dialog__content"
          >
            <h2
              class="dialog__header-text"
            >
              Voting
            </h2>
            <button
              class="dialog__button"
              data-testid="voting-dialog__cumulative-voting-button"
            >
              <label>
                Allow cumulative voting
              </label>
              <div
                class="toggle toggle--active voting-dialog__toggle"
              />
            </button>
            <div
              class="dialog__button"
            >
              <label>
                Number of votes
              </label>
              <button
                class="voting-dialog__vote-button"
                data-testid="voting-dialog__minus-button"
              >
                <svg>
                  icon-minus.svg
                </svg>
              </button>
              <label
                class="voting-dialog__vote-label"
              >
                5
              </label>
              <button
                class="voting-dialog__vote-button"
                data-testid="voting-dialog__plus-button"
              >
                <svg>
                  icon-plus.svg
                </svg>
              </button>
            </div>
            <button
              class="voting-dialog__start-button"
              data-testid="voting-dialog__start-button"
            >
              <label>
                Start voting phase
              </label>
            </button>
          </article>
          <button
            class="dialog__close-button"
          >
            <svg
              class="dialog__close-icon"
            >
              icon-close.svg
            </svg>
          </button>
        </aside>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;
